# Koji

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
include/Koji/: Application.h  Components.hpp  Editor.h  Engine.h  EntityRegistry.hpp  Koji.h  ResourceLoader.h  Scene.h  Systems.hpp  Time.h
include/Koji/Core/: Application.h  Scene.h  Time.h
include/Koji/ECS/: Archetype.h  Chunck.h  Chunk.h  Component.h  ECS.h  Entity.h  EntityManager.h  EntityManager.hpp  Registers.hpp  System.h  World.h
include/Koji/ECS/Components/: Collider.h  Components.hpp  Mesh.h  MetaData.h  Model.h  PhysicsBody.h  Sphere.h  Transform.h  Velocity.h  kTransform.h  kVelocity.h  mesh.h
include/Koji/ECS/Systems/: PhysicsSystem.h  RenderSystem.h  RenderingSystem.cpp  RenderingSystem.h  RenderingSystem.hpp  Systems.hpp  Time.h
include/Koji/ECS/components/: Transform.h
include/Koji/Editor/: Editor.hpp  GuiManager.hpp  GuiWindows.hpp  Systems.hpp
include/Koji/Engine/: Application.hpp  Components.hpp  EntityRegistry.hpp  Scene.h  Systems.hpp
include/Koji/Render/: GraphicsResourcesLoader.h  Renderer.h
libs/: libs_track.md
libs/bgfx/: CMakeLists.txt
libs/bgfx.cmake/: CMakeLists.txt
libs/bgfx.cmake/bx/include/bx/: hash.h  simd_t.h
libs/bgfx.cmake/bx/include/compat/mingw/: dirent.h
libs/bgfx.cmake/cmake/bgfx/: bgfx.cmake
libs/bgfx/cmake/bgfx/: examples.cmake
libs/bgfx/lib/cmake/bgfx/: bgfxConfigVersion.cmake  bgfxTargets-release.cmake  bgfxTargets.cmake
libs/entt/include/: entt.hpp  fwd.hpp
libs/entt/include/core/: type_info.hpp
libs/entt/src/entt/entity/: handle.hpp  mixin.hpp  organizer.hpp  snapshot.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/glm/: mat2x4.hpp  mat3x2.hpp
libs/glm/glm/detail/: type_vec1.inl  type_vec2.inl
libs/raylib/src/: raymath.h
libs/reactphysics3d/include/reactphysics3d/utils/: DebugRenderer.h
libs/reactphysics3d/src/utils/: DebugRenderer.cpp
libs/rlImGui/: CMakeLists.txt
resources/shaders/: CMakeLists.txt  basic_fs.sc  basic_varying.def.sc  basic_vs.sc
src/: Application.cpp  ResourceLoader.cpp  Scene.cpp  Time.cpp  main.cpp
src/Core/: Application.cpp  Time.cpp
src/ECS/: Archetype.cpp  Chunck.cpp  Chunk.cpp  EntityManager.cpp  World.cpp
src/ECS/Components/: Mesh.cpp
src/ECS/Systems/: RenderSystem.cpp  RenderingSystem.cpp
src/Editor/: Editor.cpp  GuiManager.cpp
src/Editor/GuiWindows/: SceneEntitiesTree.cpp  SceneRenderingWindow.cpp
src/Editor/Systems/: EditorRenderingSystem.cpp
src/Engine/: Application.cpp  Time.cpp
src/Engine/Systems/: RaylibRenderingSystem.cpp  RenderingSystem.cpp
src/Render/: GraphicsResourcesLoader.cpp  Renderer.cpp
src/Systems/: RaylibRenderingSystem.cpp
